2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Implement GetAllLocals.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSessionFactory.cs: Fix construction process command line string.
	* GdbSession.cs: Track api changes.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.Gdb.make: Install the assemblies to the correct
	  directory.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Added support for code completion.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Track api changes.
	* GdbSession.cs: Clean temporary variables.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Track api changes.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs: Support modifying variable values.
	* GdbSession.cs: Implemented support for disassembling files.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Track api changes.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbBacktrace.cs, GdbSession.cs: Allow setting the active thread.
	  Implemented GetThreads and GetProcesses.
	* ResultData.cs: Handle weird case where a tuple can have several
	  values for a property.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSession.cs: Implemented detach.

2008-06-20  Lluis Sanchez Gual <lluis@novell.com> 

	* GdbSessionFactory.cs, GdbBacktrace.cs, GdbSession.cs, ResultData.cs:
	  Implemented process attaching, variable query, disassemble.

2008-06-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Debugger.Gdb.make, configure, MonoDevelop.Debugger.mdp,
	  MonoDevelop.Debugger.mds, Makefile.include, rules.make,